<resources>
    <string name="app_name">MovieMate</string>

    <!--    Menu Item Names-->
    <string name="menuitem_home">Home</string>
    <string name="menuitem_watchlist">Watchlist</string>
    <string name="menuitem_watched">Watched</string>
    <string name="menuitem_profile">Profile</string>

    <!--    -->
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="watched_fragment">Watched Page</string>
    <string name="login_page_username_hint">you@example.com</string>
    <string name="login_page_password_hint">********</string>
    <string name="login_page_subtitle">Sign in to explore movies</string>
    <string name="login_page_email_label">Enter your email</string>
    <string name="login_page_password_label">Enter your password</string>
    <string name="login_page_title">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="register_page_subtitle">Welcome, great movies await you :)</string>
    <string name="nickname_label">Pick a nickname</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nickname_hint">Let out your creative side</string>
    <string name="register_page_confirm_password">Confirm password</string>
    <string name="home_fragment_greeting">Welcome, Adventurer</string>
    <string name="movie_poster">Movie Poster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="demo_movie_overview">In a city where fire, water, land and air residents live together, a fiery young woman and a go-with-the-flow guy will discover something elemental: how much they have in common.</string>
    <string name="demo_movie_title">Elemental</string>
    <string name="overview">Overview</string>
    <string name="genres">Genres</string>
    <string name="profile_image">Profile Image</string>
    <string name="dummy_username">Drew Taggart</string>
    <string name="dummy_email">andrew@thechainsmokers.com</string>
    <string name="preferences">Preferences</string>
    <string name="recommendations">Recommendations</string>
    <string name="pending_watch">Pending Watch</string>
    <string name="update_preferences">Update Preferences</string>
    <string name="profile">Profile</string>
    <string name="nickname">Nickname</string>
    <string name="update_profile">Update Profile</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="already_watched">Already Watched</string>
    <string name="done_watching">Done Watching</string>
    <string name="save_to_watch_later">Save to Watch Later</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="search">Search</string>

</resources>