<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MovieInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMovieGraphics"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMovieBackdrop"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_backdrop"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/elemental_backdrop" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_gravity="top"
            android:background="@drawable/fade_bottom"
            app:layout_constraintBottom_toBottomOf="@id/ivMovieBackdrop"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                app:srcCompat="@drawable/elementals" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textStyle="bold"
            android:text="Elemental"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMovieBackdrop" />

        <androidx.appcompat.widget.AppCompatRatingBar
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:layout_margin="8dp"
            android:progressBackgroundTint="@color/offwhite"
            android:progressTint="@color/goldenyellow"
            android:rating="4.5"
            android:stepSize="0.1"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
            app:layout_constraintLeft_toRightOf="@id/cvMoviePoster" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</LinearLayout>